import("//mojo/public/tools/bindings/mojom.gni")

group("groundwater") {
  deps = [
    ":mocker-server",
    ":mocker-client",
  ]
}

executable("mocker-server") {
  sources = [
    "main.cpp",
  ]
  deps = [
    "//base",
    "//mojo/edk",
    ":mojom",
  ]
}

executable("mocker-client") {
  sources = [
    "runner.cpp",
  ]
  deps = [
    "//base",
    "//mojo/edk",
    "//v8",
    "//v8:v8_libplatform",
    ":mojom",
  ]
}

mojom("mojom") {
  sources = [
      "groundwater.mojom",
  ]
}
