import("//mojo/public/tools/bindings/mojom.gni")

group("webcontainer") {
  deps = [
    ":webcontainerd",
    ":webcontainerc",
  ]
}

executable("webcontainerd") {
  sources = [
    "main.cpp",
  ]
  deps = [
    "//base",
    "//mojo/edk",
    ":mojom",
  ]
}

executable("webcontainerc") {
  sources = [
    "runner.cpp",
  ]
  deps = [
    "//base",
    "//mojo/edk",
    "//v8",
    "//v8:v8_libplatform",
    ":mojom",
  ]
}

mojom("mojom") {
  sources = [
      "webcontainer.mojom",
  ]
}
